log
Fri Apr 17 06:33:53 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
d50e04f
Fri Apr 17 06:40:56 PM UTC 2026: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:78:17: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   78 |         if(map->bucket[index]->key != NULL && is_equal(map->bucket[index]->key, key))
      |                 ^~~~~~
      |                 buckets
hashmap.c:78:61: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   78 |         if(map->bucket[index]->key != NULL && is_equal(map->bucket[index]->key, key))
      |                                                             ^~~~~~
      |                                                             buckets
hashmap.c:74:10: error: unused variable ‘start’ [-Werror=unused-variable]
   74 |     long start = index;
      |          ^~~~~
cc1: all warnings being treated as errors
9be7cf7
Fri Apr 17 06:41:11 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:78:17: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   78 |         if(map->bucket[index]->key != NULL && is_equal(map->buckets[index]->key, key))
      |                 ^~~~~~
      |                 buckets
hashmap.c:74:10: error: unused variable ‘start’ [-Werror=unused-variable]
   74 |     long start = index;
      |          ^~~~~
cc1: all warnings being treated as errors
ce2987d
Fri Apr 17 06:41:43 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:78:17: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   78 |         if(map->bucket[index]->key != NULL && is_equal(map->buckets[index]->key, key))
      |                 ^~~~~~
      |                 buckets
6d7cd49
Fri Apr 17 06:41:56 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/60
3ff207e
Fri Apr 17 06:42:24 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|6
total_score: 10/60
e9f881b
Fri Apr 17 06:44:03 PM UTC 2026: 
 hashmap.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  3|6
total_score: 10/60
3d2c399
Fri Apr 17 06:45:30 PM UTC 2026: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  3|6
total_score: 10/60
954cc2a
Fri Apr 17 07:05:37 PM UTC 2026: 
 hashmap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  3|6
total_score: 10/60
26c6102
Fri Apr 17 07:06:30 PM UTC 2026: 
 tests:  3|6
total_score: 10/60
ef941cf
Fri Apr 17 07:14:49 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|6
total_score: 10/60
ab14a9f
Fri Apr 17 07:15:54 PM UTC 2026: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|6
total_score: 10/60
51ba1f2
Sun Apr 19 03:48:04 AM UTC 2026: 
 tests:  3|6
total_score: 10/60
8f8e9a9
Sun Apr 19 07:16:45 PM UTC 2026: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:50:5: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   50 |     map->buckets = calloc(capacity, sizeof(Pair *));
      |     ^~~
      |     mapa
hashmap.c:50:5: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:51:5: error: ‘max’ undeclared (first use in this function); did you mean ‘fmax’?
   51 |     max->size = 0;
      |     ^~~
      |     fmax
hashmap.c:49:15: error: unused variable ‘mapa’ [-Werror=unused-variable]
   49 |     HashMap * mapa = malloc(sizeof(HashMap));
      |               ^~~~
cc1: all warnings being treated as errors
2e221e3
Sun Apr 19 07:17:34 PM UTC 2026: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  3|6
total_score: 10/60
87a6b34
